--- a/styles/styles.css
+++ b/styles/styles.css
@@ -22,9 +22,9 @@ a:hover{text-decoration: none;color: inherit}
 
 
 .calculator{border: 0.1em solid black; padding: 0.8em; position: absolute; background: #90909045; margin: 1em}
-.results{padding: 4.5em 0em;}
+.results{padding: 2em 0em;font-size: 2em;min-height: 180px;}
 .container{display: grid; grid-template-columns: repeat(4, 7em); grid-template-rows: repeat(6, 3.6em); grid-gap: 0.1em;}
-.item{background-color: white; border: 0.08em solid #9293949e;display: flex; align-items: center; justify-content: center;}
+.item{background-color: white; border: 0.08em solid #9293949e;display: flex; align-items: center; justify-content: center;font-size: 1em;cursor: pointer;}
 .item.functions{background-color: #fbfdff7a;}
 .item.strong{font-weight: 900;}
-.item.diferent{background-color: #00adff85;}
+.item.equal{background-color: #00adff85;}
